# websockets

./: .gitignore  Connection.py  Dockerfile  README.md  account_db.py  bank.py  client.py  install.sh  install_sqlite.sh  person.py  pyproject.toml  requirements.txt  server.py  start.sh
Client/: Accounts.py  Bank.py  Client.py  Person.py
Server/: Clients.py  test
configs/: __client1__config_1.json  __client2__config_2.json  accounts.sqlite  bank.json  bank_database.json  bank_permissions.json  person1.json  person2.json
