[tool.poetry]
name = "websockets-project"
version = "0.1.0"
description = ""
authors = ["Tomasz Darmetko", "Laura Isotalo", "Tu Anh"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
websockets = "^8.1"
pycryptodome = "^3.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
